# meetyou-backend

./: .gitignore  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
.ebextensions/: 01-django.config  01-proxy.config  02-django.config  02-redis.config  03-django.config  03-proxy.config  django.config
.platform/nginx/: nginx.conf
config/: asgi.py  settings.py  urls.py
core/: handler.py  models.py  utils.py
notifications/: models.py  serializers.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_notification_room.py  0003_remove_notification_is_read.py
room/: admin.py  apps.py  consumer.py  models.py  routing.py  routings.py  serializers.py  urls.py  utils.py  views.py
room/migrations/: 0001_initial.py  0002_alter_room_options.py  0003_alter_attendee_options_alter_vote_options_and_more.py  0004_roomcode.py  0005_remove_roomcode_created_at.py
users/: consumer.py  models.py  routing.py  schemata.py  serializers.py  urls.py  views.py
users/management/commands/: createsu.py
users/migrations/: 0001_initial.py  0002_user_avatar_alter_user_nickname.py  0003_alter_user_options.py  0004_user_alert_allowed.py
